--- a/todobackend/docker/dev/Dockerfile
+++ b/todobackend/docker/dev/Dockerfile
@@ -1,13 +1,12 @@
 FROM hoonio/python:latest
 
 RUN apt-get update && \
-    apt-get install -qy python-dev
+    apt-get install -qy python-dev libmysqlclient-dev
 
 RUN . /appenv/bin/activate && \
     pip install wheel --upgrade
 
-ENV WHEELHOUSE=/wheelhouse PIP_WHEEL_DIR=/wheelhouse PIP_FIND_LINKS=/wheelhouse
-XDG_CACHE_HOME=/cache
+ENV WHEELHOUSE=/wheelhouse PIP_WHEEL_DIR=/wheelhouse PIP_FIND_LINKS=/wheelhouse XDG_CACHE_HOME=/cache
 
 # OUTPUT: build artefacts
 VOLUME /wheelhouse
