--- a/todobackend/docker/dev/docker-compose.yml
+++ b/todobackend/docker/dev/docker-compose.yml
@@ -12,9 +12,11 @@ test:
     MYSQL_PASSWORD: password
     TEST_OUTPUT_DIR: /reports
 
-builder:
+build:
   build: ../../
   dockerfile: docker/dev/Dockerfile
+  volumes:
+    - ../../target:/wheelhouse
   volumes_from:
     - cache
   entrypoint: "entrypoint.sh"
@@ -22,12 +24,13 @@ builder:
 
 agent:
   image: hoonio/ansible
+  volumes:
+    - ../../ansible/probe.yml:/ansible/site.yml
   links:
     - db
   environment:
     PROBE_HOST: "db"
     PROBE_PORT: "3306"
-  command: ["probe.yml"]
 
 db:
   image: mysql:5.6
